# phone-number-parser

./: CHANGELOG.md  README.md  phone-number-parser.cabal
app/: Main.hs
src/: PhoneNumberParser.hs
test/: Spec.hs
